TestScenarios/slow-app/manifests/dep.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agh
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slow-start-app
  namespace: agh
spec:
  replicas: 2
  selector:
    matchLabels:
      app: slow-start-app
  template:
    metadata:
      labels:
        app: slow-start-app
    spec:
      containers:
      - name: slow-start-app
        image: weedesigners/slow-start-app:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "0.2"
            memory: 200Mi
          limits:
            cpu: "0.2"
            memory: 200Mi
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: slow-start-app-svc
  namespace: agh
spec:
  selector:
    app: slow-start-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
