TestScenarios/slow-app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: slow-app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: response-time-app-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
    - host: prometheus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: hephaestus
spec:
  ingressClassName: nginx
  rules:
    - host: hephaestus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hephaestus-gui-svc
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: agh
spec:
  ingressClassName: nginx
  rules:
    - host: agh.slow-start-app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: slow-start-app-svc
                port:
                  number: 80
